// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<span>
  <button
    class="IconButton EditorToolbarButton IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--primary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders the component as active 1`] = `
<span>
  <button
    class="IconButton EditorToolbarButton EditorToolbarButton--is-active IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--primary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders the component as disabled 1`] = `
<span>
  <button
    class="IconButton EditorToolbarButton IconButton--disabled IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    disabled=""
    type="button"
  >
    <span
      class="TabFocusTrap IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--primary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders the component with a tooltip 1`] = `
<span>
  <button
    class="IconButton EditorToolbarButton IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--primary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders the component with an additional class name 1`] = `
<span>
  <button
    class="IconButton EditorToolbarButton my-extra-class IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--primary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
    </span>
  </button>
</span>
`;

exports[`renders with a dropdown indicator 1`] = `
<span>
  <button
    class="IconButton EditorToolbarButton IconButton--secondary"
    data-test-id="cf-ui-editor-toolbar-button"
    type="button"
  >
    <span
      class="TabFocusTrap IconButton__inner"
      tabindex="-1"
    >
      <svg
        class="Icon Icon--small Icon--primary IconButton__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11.7 5v5.5H6.1V5H3.3v14h2.8v-6.1h5.6V19h2.8V5zM18.6 19v-6.3L17.1 14l-1-1.4 2.8-2.1h1.8V19h-2.1z"
        />
      </svg>
      <span
        class="IconButton__label"
      >
        H1
      </span>
      <svg
        class="Icon Icon--small Icon--secondary IconButton__dropdown"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 18 18"
        width="1em"
      >
        <path
          d="M3.96967 6.21967C4.26256 5.92678 4.73744 5.92678 5.03033 6.21967L9 10.1893L12.9697 6.21967C13.2626 5.92678 13.7374 5.92678 14.0303 6.21967C14.3232 6.51256 14.3232 6.98744 14.0303 7.28033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803L3.96967 7.28033C3.67678 6.98744 3.67678 6.51256 3.96967 6.21967Z"
        />
      </svg>
    </span>
  </button>
</span>
`;
